# HRSS-recommendation-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  config.py
app/assets/: style.css
app/components/: data_loader.py  model_loader.py  predictor.py  recommender.py  ui_helpers.py
app/pages/: explainability.py  model_comparison.py  overview.py  prediction.py  recommendation.py
configs/: config.yaml  feature_config.yaml  model_config.yaml
deployment/: docker-compose.yml
deployment/docker/: Dockerfile
docs/: Business Understanding and Problem Framing.docx  Business Understanding and Problem Framing.md  architecture.md  evaluation_framework.md  project_structure.md  system_design.md
docs/archive/: Blueprint.docx
experiments/notebooks/: 01_data_understanding.ipynb  02_feature_engineering.ipynb  03_model_experiments.ipynb  04_model_evaluation_comparison.ipynb  05_recommendation_engine.ipynb
monitoring/: drift_detection.py  performance_monitoring.py
src/api/: main.py  routes.py  schemas.py
src/core/: domain_schema.py  problem_definition.py
src/data/: feature_engineering.py  ingestion.py  preprocessing.py  split.py
src/evaluation/: evaluator.py  metrics.py  validation.py
src/feature_store/: registry.py  store.py
src/features/: feature_builder.py  feature_validator.py
src/pipeline/: inference_pipeline.py  pipeline_utils.py  train_pipeline.py
src/recommendation/: decision_policy.py  rule_engine.py  scoring.py
src/services/: inference_service.py  prediction_service.py  recommendation_service.py
tests/: conftest.py
(+24 files in other folders)
