[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrss-recommendation-system"
version = "0.1.0"
description = "Industrial Operational Recommendation System based on HRSS telemetry"
authors = [
    {name = "Arfi", email = "arfi@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "mlflow",
    "streamlit",
    "pycaret"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort"
]
api = [
    "fastapi",
    "uvicorn"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
